---
source: compiler-core/src/javascript/tests/panic.rs
expression: "\npub fn go() {\n  let x = \"wibble\"\n  panic as x\n}\n"
---
----- SOURCE CODE

pub fn go() {
  let x = "wibble"
  panic as x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function go() {
  let x = "wibble";
  throw makeError("panic", FILEPATH, "my/mod", 4, "go", x, {})
}
